--- a/servers/web/public/views/authentication/sign_up.html
+++ b/servers/web/public/views/authentication/sign_up.html
@@ -1,37 +1,41 @@
-﻿<div class="card card-register mx-auto mt-5">
-  <div class="card-header text-center">Sign Up to WebSimAdmin</div>
-  <div class="card-body">
-    <form name="signUpForm" novalidate>
-      <div class="form-group">
-        <label>Full name</label>
-        <input class="form-control" type="text" placeholder="Enter full name">
-      </div>
-      <div class="form-group">
-        <label>Email address</label>
-        <input class="form-control" type="email" placeholder="Enter email">
-      </div>
-      <div class="form-group">
-        <div class="form-row">
-          <div class="col-md-6">
-            <label>Password</label>
-            <input class="form-control" type="password" placeholder="Password">
-          </div>
-          <div class="col-md-6">
-            <label for="exampleConfirmPassword">Confirm password</label>
-            <input class="form-control" type="password" placeholder="Confirm password">
+﻿<div class="container">
+  <div class="alert alert-danger mx-auto mt-5" ng-if="errorMessage">{{ errorMessage }}</div>
+
+  <div class="card card-register mx-auto mt-5">
+    <div class="card-header text-center">Sign Up to WebSimAdmin</div>
+    <div class="card-body">
+      <form name="signUpForm" novalidate>
+        <div class="form-group">
+          <label>Full name</label>
+          <input class="form-control" type="text" name="username" ng-model="signUp.username" placeholder="Enter full name" ng-required="true">
+        </div>
+        <div class="form-group">
+          <label>Email address</label>
+          <input class="form-control" type="email" name="email" ng-model="signUp.email" placeholder="Enter email" ng-required="true">
+        </div>
+        <div class="form-group">
+          <div class="form-row">
+            <div class="col-md-6">
+              <label>Password</label>
+              <input class="form-control" type="password" name="password" ng-model="signUp.password" placeholder="Password" ng-required="true">
+            </div>
+            <div class="col-md-6">
+              <label>Confirm password</label>
+              <input class="form-control" type="password" name="confirmPassword" ng-model="signUp.confirmPassword" placeholder="Confirm password" ng-required="true">
+            </div>
           </div>
         </div>
+        <input class="btn btn-primary btn-block" ng-click="sign_up(signUp)" ng-disabled="signUpForm.$invalid" value="Sign up for WebSimAdmin">
+      </form>
+      <p class="form-control-note mb-0 text-center">
+        By clicking "Sign up for WebSimAdmin", you agree to our
+        <a class="" href="#" target="_blank">terms of service</a> and
+        <a class="" href="#" target="_blank">privacy policy</a>.
+      </p>
+      <div class="text-center">
+        <a class="d-block small mt-3" href="#!sign_in">Sign In Page</a>
+        <a class="d-block small" href="#!forgot_password">Forgot Password?</a>
       </div>
-      <a class="btn btn-primary btn-block" href="#!sign_in">Sign up for WebSimAdmin</a>
-    </form>
-    <p class="form-control-note mb-0 text-center">
-      By clicking "Sign up for WebSimAdmin", you agree to our
-      <a class="" href="#" target="_blank">terms of service</a> and
-      <a class="" href="#" target="_blank">privacy policy</a>.
-    </p>
-    <div class="text-center">
-      <a class="d-block small mt-3" href="#!sign_in">Sign In Page</a>
-      <a class="d-block small" href="#!forgot_password">Forgot Password?</a>
     </div>
   </div>
 </div>
