--- a/servers/web/public/views/dashboard/finished.html
+++ b/servers/web/public/views/dashboard/finished.html
@@ -1,42 +1,50 @@
 ﻿<div class="content-wrapper">
   <div class="container-fluid">
-    <form class="form-inline">
-      <div class="form-group">
-        <input type="text" ng-model="search" class="form-control" placeholder="Search">
-      </div>
-    </form>
+    <div class="alert alert-primary text-center" role="alert" ng-cloak ng-if="!finishedTasks.length">
+      You currently have no finished groups.
+    </div>
 
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th ng-click="sort('group')">
-            Group
-            <i class="fa fa-fw fa-sort" ng-show="sortKey=='group'" ng-class="{'fa fa-fw fa-sort-up':reverse,'fa fa-fw fa-sort-down':!reverse}"></i>
-          </th>
-          <th ng-click="sort('seed_amount')">
-            Seed Amount
-            <i class="fa fa-fw fa-sort" ng-show="sortKey=='seed_amount'" ng-class="{'fa fa-fw fa-sort-up':reverse,'fa fa-fw fa-sort-down':!reverse}"></i>
-          </th>
-          <th ng-click="sort('start_time')">
-            Start Time
-            <i class="fa fa-fw fa-sort" ng-show="sortKey=='start_time'" ng-class="{'fa fa-fw fa-sort-up':reverse,'fa fa-fw fa-sort-down':!reverse}"></i>
-          </th>
-          <th ng-click="sort('end_time')">
-            End Time
-            <i class="fa fa-fw fa-sort" ng-show="sortKey=='end_time'" ng-class="{'fa fa-fw fa-sort-up':reverse,'fa fa-fw fa-sort-down':!reverse}"></i>
-          </th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr dir-paginate="task in tasks | orderBy: sortKey:reverse | filter: search | itemsPerPage: 10 track by task._id">
-          <td>{{task.name}}</td>
-          <td>{{task.seedAmount}}</td>
-          <td>{{task.startTime}}</td>
-          <td>{{task.endTime}}</td>
-        </tr>
-      </tbody>
-    </table>
-    <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true" class="page-link"></dir-pagination-controls>
+    <div ng-if="finishedTasks.length">
+      <form class="form-inline">
+        <div class="form-group mb-3">
+          <input type="text" ng-model="search" class="form-control" placeholder="Search">
+        </div>
+      </form>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th ng-click="sort('group')">
+              Group
+              <i class="fa fa-fw fa-sort" ng-show="sortKey=='group'" ng-class="{'fa fa-fw fa-sort-up':reverse,'fa fa-fw fa-sort-down':!reverse}"></i>
+            </th>
+            <th ng-click="sort('seed_amount')">
+              Seed Amount
+              <i class="fa fa-fw fa-sort" ng-show="sortKey=='seed_amount'" ng-class="{'fa fa-fw fa-sort-up':reverse,'fa fa-fw fa-sort-down':!reverse}"></i>
+            </th>
+            <th ng-click="sort('start_time')">
+              Start Time
+              <i class="fa fa-fw fa-sort" ng-show="sortKey=='start_time'" ng-class="{'fa fa-fw fa-sort-up':reverse,'fa fa-fw fa-sort-down':!reverse}"></i>
+            </th>
+            <th ng-click="sort('end_time')">
+              End Time
+              <i class="fa fa-fw fa-sort" ng-show="sortKey=='end_time'" ng-class="{'fa fa-fw fa-sort-up':reverse,'fa fa-fw fa-sort-down':!reverse}"></i>
+            </th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr dir-paginate="finishedTask in finishedTasks | orderBy: sortKey:reverse | filter: search | itemsPerPage: 10 track by finishedTask._id">
+            <td>{{finishedTask.name}}</td>
+            <td>{{finishedTask.seedAmount}}</td>
+            <td>{{finishedTask.startTime}}</td>
+            <td>{{finishedTask.endTime}}</td>
+            <td><button class="btn btn-large btn-primary"><span class="fa fa-fw fa-arrow-down"></span> Export</button></td>
+            <td><button class="btn btn-large btn-danger"><span class="fa fa-fw fa-trash"></span> Remove</button></td>
+          </tr>
+        </tbody>
+      </table>
+      <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true"></dir-pagination-controls>
+    </div>
   </div>
 </div>
