--- a/servers/web/public/views/dashboard/finished.html
+++ b/servers/web/public/views/dashboard/finished.html
@@ -40,11 +40,32 @@
             <td>{{finishedTask.startTime}}</td>
             <td>{{finishedTask.endTime}}</td>
             <td><button class="btn btn-large btn-primary"><span class="fa fa-fw fa-arrow-down"></span> Export</button></td>
-            <td><button class="btn btn-large btn-danger"><span class="fa fa-fw fa-trash"></span> Remove</button></td>
+            <td><button class="btn btn-large btn-danger" data-toggle="modal" data-target="#confirmationModal"><span class="fa fa-fw fa-trash"></span> Remove</button></td>
           </tr>
         </tbody>
       </table>
       <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true"></dir-pagination-controls>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="Confirmation" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Do you wish to remove this task group set?</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          By removing this task group set you will not be able to recover it
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger">Remove</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
