Reforms add screen
New components are separated in files

--- a/servers/web/public/views/dashboard/active.html
+++ b/servers/web/public/views/dashboard/active.html
@@ -1,7 +1,7 @@
 ﻿<div class="content-wrapper">
   <div class="container-fluid">
     <div class="alert alert-primary text-center" role="alert" ng-cloak ng-if="!activeTasks.length">
-      You currently have no active groups. You can create one <a href="#!add" class="alert-link">here</a>!
+      <i class="fa fa-fw fa-info-circle"></i> You currently have no active groups. You can create one <a href="#!add" class="alert-link">here</a>!
     </div>
 
     <div ng-if="activeTasks.length">
