--- a/servers/web/public/views/dashboard/finished.html
+++ b/servers/web/public/views/dashboard/finished.html
@@ -1,7 +1,7 @@
 ﻿<div class="content-wrapper">
   <div class="container-fluid">
     <div class="alert alert-primary text-center" role="alert" ng-cloak ng-if="!finishedTasks.length">
-      You currently have no finished groups.
+      <i class="fa fa-fw fa-info-circle"></i> You currently have no finished groups.
     </div>
 
     <div ng-if="finishedTasks.length">
