--- a/servers/web/public/views/dashboard/forms/executable_file_form.html
+++ b/servers/web/public/views/dashboard/forms/executable_file_form.html
@@ -1,1 +1,4 @@
-﻿<input class="form-control form-control-success" name="numberForm{{id}}" type="file" ng-required="true">
+﻿<div class="custom-file">
+  <input type="file" class="custom-file-input" id="customFile">
+  <label class="custom-file-label" for="customFile">Choose file</label>
+</div>
