--- a/servers/web/public/views/dashboard/add.html
+++ b/servers/web/public/views/dashboard/add.html
@@ -9,7 +9,7 @@
             <label>Task command line</label>
             <div>
               <div class="input-group">
-                <input class="form-control form-control-success" name="commandLine" ng-model="addTaskForm.commandLine" type="text" ng-change="clear()" ng-required="true">
+                <input class="form-control form-control-success" id="commandLine" name="commandLine" ng-model="addTaskForm.commandLine" type="text" ng-change="clear()" ng-required="true">
                 <span class="input-group-btn">
                   <button class="btn btn-dark" type="button" ng-click="parse(addTaskForm.commandLine)">Parse</button>
                 </span>
@@ -17,9 +17,16 @@
               <div ng-show="addTaskGroupForm.commandLine.$touched && addTaskGroupForm.commandLine.$invalid">
                 <small class="warning">Enter a command line</small>
               </div>
+              <div class="container-fluid">
+                <span class="badge badge-secondary">Add</span>
+                <button type="button" class="btn btn-link" ng-click="addDirective('%n')">Number</button>
+                <button type="button" class="btn btn-link" ng-click="addDirective('%s')">String</button>
+                <button type="button" class="btn btn-link" ng-click="addDirective('%ef')">Executable File</button>
+                <button type="button" class="btn btn-link" ng-click="addDirective('%tf')">Text File</button>
+              </div>
             </div>
           </div>
-          <div id="inputContainer"></div>
+          <div class="form-group" id="inputContainer"></div>
         </form>
       </div>
     </div>
