--- a/servers/web/public/views/dashboard/forms/number_form.html
+++ b/servers/web/public/views/dashboard/forms/number_form.html
@@ -1,1 +1,1 @@
-﻿<input class="form-control form-control-success" name="numberForm{{id}}" type="text" ng-required="true" onkeyup="this.value = this.value.replace(/[^0-9;,]/g, \'\')">
+﻿<input class="form-control form-control-success" id="input{{id}}" type="text" onkeyup="this.value = this.value.replace(/[^0-9;,]/g, '')" ng-required="true">
