--- a/servers/web/public/views/dashboard/forms/text_file_form.html
+++ b/servers/web/public/views/dashboard/forms/text_file_form.html
@@ -1,11 +1,9 @@
-﻿<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div class="input-group mb-3">
+  <div class="input-group-prepend">
+    <input class="form-control form-control-success text-center" type="number" min="1" value="1" ng-required="true">
+  </div>
+  <div class="custom-file">
+    <input type="file" class="custom-file-input" id="inputGroupFile01">
+    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+  </div>
+</div>
