--- a/servers/web/public/views/dashboard/forms/executable_file_form.html
+++ b/servers/web/public/views/dashboard/forms/executable_file_form.html
@@ -1,4 +1,4 @@
 ﻿<div class="custom-file">
-  <input type="file" class="custom-file-input" id="customFile">
-  <label class="custom-file-label" for="customFile">Choose file</label>
+  <input type="file" class="custom-file-input" id="{{id}}">
+  <label class="custom-file-label" for="{{id}}">Choose file</label>
 </div>
