--- a/servers/web/public/views/dashboard/forms/text_file_form.html
+++ b/servers/web/public/views/dashboard/forms/text_file_form.html
@@ -1,9 +1,4 @@
-﻿<div class="input-group mb-3">
-  <div class="input-group-prepend">
-    <input class="form-control form-control-success text-center" type="number" min="1" value="1" ng-required="true">
-  </div>
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="inputGroupFile01">
-    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-  </div>
+﻿<div class="custom-file">
+   <input type="file" class="custom-file-input" id="customFile">
+   <label class="custom-file-label" for="customFile">Choose file</label>
 </div>
