--- a/servers/web/public/views/dashboard/forms/submit.html
+++ b/servers/web/public/views/dashboard/forms/submit.html
@@ -1,1 +1,1 @@
-﻿<input class="btn btn-primary btn-block" ng-disabled="signUpForm.$invalid" value="Submit">
+﻿<input class="btn btn-primary btn-block" ng-disabled="addTaskForm.$invalid" value="Submit">
