--- a/servers/web/public/views/dashboard/add.html
+++ b/servers/web/public/views/dashboard/add.html
@@ -17,20 +17,19 @@
               <label>Task arguments</label>
               <div>
                 <div class="input-group">
-                  <input class="form-control form-control-success" id="commandLine" name="commandLine" ng-model="addTaskForm.commandLine" type="text" ng-change="clear()" ng-required="true">
+                  <input class="form-control form-control-success" id="argumentsTemplate" name="argumentsTemplate" ng-model="addTaskForm.argumentsTemplate" type="text" ng-change="clear()">
                   <span class="input-group-btn">
-                    <button class="btn btn-dark" type="button" ng-click="parse(addTaskForm.commandLine)"><i class="fa fa-fw fa-check"></i> Parse</button>
+                    <button class="btn btn-dark" type="button" ng-click="parse(addTaskForm.argumentsTemplate)"><i class="fa fa-fw fa-check"></i> Parse</button>
                   </span>
                 </div>
-                <div ng-show="addTaskGroupForm.commandLine.$touched && addTaskGroupForm.commandLine.$invalid">
+                <div ng-show="addTaskGroupForm.argumentsTemplate.$touched && addTaskGroupForm.commandLine.$invalid">
                   <small class="warning">Enter a command line</small>
                 </div>
                 <div class="container-fluid">
-                  <span class="badge badge-secondary">Add</span>
+                  <span class="badge badge-pill badge-secondary">Interpretive Directives</span>
                   <button type="button" class="btn btn-link" ng-click="addDirective('%n')">Number</button>
                   <button type="button" class="btn btn-link" ng-click="addDirective('%s')">String</button>
-                  <button type="button" class="btn btn-link" ng-click="addDirective('%ef')">Executable File</button>
-                  <button type="button" class="btn btn-link" ng-click="addDirective('%tf')">Text File</button>
+                  <button type="button" class="btn btn-link" ng-click="addDirective('%f')">File</button>
                 </div>
               </div>
             </div>
