Adds executable dropdown in add page

--- a/servers/web/public/views/dashboard/directives/precedence.html
+++ b/servers/web/public/views/dashboard/directives/precedence.html
@@ -1,1 +1,1 @@
-﻿<input class="form-control form-control-success" type="number" min="1" ng-model="model"  ng-init="init" ng-required="true" />
+﻿<input class="form-control form-control-success" type="number" min="1" ng-model="model" ng-required="true" />
