--- a/servers/web/public/views/dashboard/add.html
+++ b/servers/web/public/views/dashboard/add.html
@@ -7,6 +7,8 @@
         <form name="addTaskGroupForm" novalidate>
           <div class="form-group">
             <div class="mb-3">
+              <label>Executable</label>
+              <select class="custom-select" ng-model="addTaskForm.executable" ng-options="executable for executable in supportedExecutables"></select>
               <label>Task runnable</label>
               <div class="custom-file">
                 <input type="file" class="custom-file-input" fileread="addTaskForm.taskRunnable">
@@ -39,5 +41,4 @@
       </div>
     </div>
   </div>
-  {{addTaskForm}}
 </div>
