Adds chartjs graphs for task set
The user may choose the curve, the X axis and the Y axis. The graph will
plot accordingly

--- a/servers/web/public/views/authentication/sign_up.html
+++ b/servers/web/public/views/authentication/sign_up.html
@@ -33,8 +33,8 @@
         <a class="" href="#" target="_blank">privacy policy</a>.
       </p>
       <div class="text-center">
-        <a class="d-block small mt-3" href="#!sign_in">Sign In Page</a>
-        <a class="d-block small" href="#!forgot_password">Forgot Password?</a>
+        <a class="d-block small mt-3" ng-href="#!sign_in">Sign In Page</a>
+        <a class="d-block small" ng-href="#!forgot_password">Forgot Password?</a>
       </div>
     </div>
   </div>
