--- a/servers/web/public/views/dashboard/add.html
+++ b/servers/web/public/views/dashboard/add.html
@@ -17,7 +17,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Runnable type</span>
               </div>
-              <select class="form-control col-md-1" ng-model="addTaskForm.runnableInfo.info" ng-options="supportedRunnableInfo.type for supportedRunnableInfo in supportedRunnablesInfo"></select>
+              <select class="custom-select col-md-1" ng-model="addTaskForm.runnableInfo.info" ng-options="supportedRunnableInfo.type for supportedRunnableInfo in supportedRunnablesInfo"></select>
               <div class="input-group-prepend">
                 <span class="input-group-text">Runnable</span>
               </div>
