--- a/servers/web/public/views/dashboard/finished.html
+++ b/servers/web/public/views/dashboard/finished.html
@@ -54,7 +54,7 @@
           </button>
         </div>
         <div class="modal-body">
-          By removing this task group set you will not be able to recover it
+          By removing this task set you will not be able to recover it
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
