--- a/servers/web/public/views/dashboard/executing.html
+++ b/servers/web/public/views/dashboard/executing.html
@@ -29,7 +29,7 @@
         </thead>
         <tbody>
           <tr dir-paginate="executingTaskSet in executingTaskSets | orderBy: sortKey:reverse | filter: search | itemsPerPage: 10 track by executingTaskSet._id">
-            <td>{{executingTaskSet.name}}</td>
+            <td><a ng-href="#!graph/{{executingTaskSet._id}}">{{executingTaskSet.name}}</a></td>
             <td>{{executingTaskSet.remainingTasksCount}}</td>
             <td>{{executingTaskSet.startTime | date:'yyyy-MM-dd HH:mm:ss Z'}}</td>
           </tr>
