--- a/servers/web/public/views/dashboard/log.html
+++ b/servers/web/public/views/dashboard/log.html
@@ -1,7 +1,7 @@
 ﻿<div class="content-wrapper">
-  <table class="table table-striped table-hover">
+  <table class="table">
     <thead>
-      <tr ng-click="toggle=!toggle">
+      <tr ng-click="toggle=!toggle" ng-init="toggle=false">
         <th style='width:10%'>Level</th>
         <th>Date</th>
         <th style='width:65%'>Log</th>
@@ -22,5 +22,5 @@
       </tr>
     </tbody>
   </table>
-  <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true" class="page-link" ng-if="logs.length > 10"></dir-pagination-controls>
+  <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true" class="page-link" ng-if="logs.length > 15"></dir-pagination-controls>
 </div>
