--- a/servers/web/public/views/dashboard/graph.html
+++ b/servers/web/public/views/dashboard/graph.html
@@ -1,4 +1,12 @@
 ﻿<div class="content-wrapper">
+  <div class="container">
+    <div class="row">
+      <div uib-alert="" ng-class="'alert-success'" class="col align-self-center" role="alert" ng-if="argumentTemplate">
+        <div class="text-center"><b>Arguments: </b>{{argumentTemplate}}</div>
+      </div>
+    </div>
+  </div>
+
   <div class="col-lg-6 col-sm-12 container h-100">
     <canvas id="line" class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick"></canvas>
   </div>
