--- a/servers/web/public/views/dashboard/finished.html
+++ b/servers/web/public/views/dashboard/finished.html
@@ -34,8 +34,20 @@
             <td><a ng-href="#!graph/{{finishedTaskSet._id}}">{{finishedTaskSet.name}}</a></td>
             <td>{{finishedTaskSet.startTime | date:'yyyy-MM-dd HH:mm:ss Z'}}</td>
             <td>{{finishedTaskSet.endTime | date:'yyyy-MM-dd HH:mm:ss Z'}}</td>
-            <td><button class="btn btn-large btn-primary"><span class="fa fa-fw fa-arrow-down"></span> Export</button></td>
-            <td><button class="btn btn-large btn-danger" ng-click="removeTaskSet(finishedTaskSet._id)"><span class="fa fa-fw fa-trash"></span> Remove</button></td>
+            <td>
+              <div class="dropdown">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                  Export
+                </button>
+                <div class="dropdown-menu">
+                  <!--<span class="dropdown-item" ng-click="export(finishedTaskSet._id, 'json')">JSON</span>-->
+                  <a class="dropdown-item" ng-href="/api/task/export/?format=json&taskSetId={{finishedTaskSet._id}}" download="{{finishedTaskSet.name}}.zip">JSON</a>
+                  <a class="dropdown-item" ng-href="/api/task/export/?format=csv&taskSetId={{finishedTaskSet._id}}" download="{{finishedTaskSet.name}}.zip">CSV</a>
+                </div>
+              </div>
+            </td>
+            <!--<td><button class="btn btn-large btn-danger" ng-click="removeTaskSet(finishedTaskSet._id)"><span class="fa fa-fw fa-trash"></span> Remove</button></td>-->
+            <td><button class="btn btn-large btn-danger" ng-click="openConfirmation(finishedTaskSet._id)"><span class="fa fa-fw fa-trash"></span> Remove</button></td>
           </tr>
         </tbody>
       </table>
