Functional API to edit name and priority of TaskSets
Fix controller names of sign in and sign up

--- a/servers/web/public/views/authentication/sign_up.html
+++ b/servers/web/public/views/authentication/sign_up.html
@@ -7,7 +7,7 @@
       <form name="signUpForm" novalidate>
         <div class="form-group">
           <label>Full name</label>
-          <input class="form-control" type="text" name="username" ng-model="signUp.username" placeholder="Enter full name" ng-required="true">
+          <input class="form-control" type="text" name="username" ng-model="signUp.name" placeholder="Enter full name" ng-required="true">
         </div>
         <div class="form-group">
           <label>Email address</label>
