project: rename all 'slave' occurrences back to 'worker'

--- a/servers/web/public/views/home.html
+++ b/servers/web/public/views/home.html
@@ -7,7 +7,7 @@
     <!-- /.col-lg-8 -->
     <div class="col-lg-4">
       <h1>WebSimAdmin</h1>
-      <p>WebSimAdmin is a distributed system manager which dispatch (in a fault tolerant way) heavy computing simulation tasks to slave machines that do the processing. This system will lead to optimum time spend configuring your simulations in a distributed system.</p>
+      <p>WebSimAdmin is a distributed system manager which dispatch (in a fault tolerant way) heavy computing simulation tasks to worker machines that do the processing. This system will lead to optimum time spend configuring your simulations in a distributed system.</p>
     </div>
     <!-- /.col-md-4 -->
   </div>
