ui: update home texts

--- a/servers/web/public/views/home.html
+++ b/servers/web/public/views/home.html
@@ -6,8 +6,8 @@
     </div>
     <!-- /.col-lg-8 -->
     <div class="col-lg-4">
-      <h1>WebSimAdmin</h1>
-      <p>WebSimAdmin is a distributed system manager which dispatch (in a fault tolerant way) heavy computing simulation tasks to worker machines that do the processing. This system will lead to optimum time spend configuring your simulations in a distributed system.</p>
+      <h1>Dispatcher</h1>
+      <p>Dispatcher is a distributed system manager which dispatches (in a fault tolerant way) heavy computing simulation tasks to worker machines that do the processing. This system will lead to optimum time spent configuring your simulations in a distributed system.</p>
     </div>
     <!-- /.col-md-4 -->
   </div>
@@ -15,47 +15,47 @@
   <!-- Call to Action Well -->
   <div class="card text-white bg-secondary my-4 text-center">
     <div class="card-body">
-      <p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p>
+      <p class="text-white m-0">Execute your simulations in a distributed environment to get faster results</p>
     </div>
   </div>
 
   <!-- Content Row -->
   <div class="row">
-    <div class="col-md-4 mb-4">
+    <div class="col-md-6 mb-6">
       <div class="card h-100">
         <div class="card-body">
-          <h2 class="card-title">Card One</h2>
+          <h2 class="card-title">Fault Tolerant</h2>
+          <p class="card-text">This system guarantees consistency and correctness on simulations by detecting when an execution fails and acting accordingly.</p>
+        </div>
+        <div class="card-footer">
+          <!-- <a href="#" class="btn btn-primary">More Info</a> -->
+        </div>
+      </div>
+    </div>
+    <!-- /.col-md-6 -->
+    <div class="col-md-6 mb-6">
+      <div class="card h-100">
+        <div class="card-body">
+          <h2 class="card-title">Custom Graphs</h2>
+          <p class="card-text">Create different graphs according to which parameters you wish to compare, selecting from the results of the simulations.</p>
+        </div>
+        <div class="card-footer">
+          <!-- <a href="#" class="btn btn-primary">More Info</a> -->
+        </div>
+      </div>
+    </div>
+    <!-- /.col-md-4 -->
+    <!-- <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <div class="card-body">
+          <h2 class="card-title"></h2>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
         </div>
         <div class="card-footer">
           <a href="#" class="btn btn-primary">More Info</a>
         </div>
       </div>
-    </div>
-    <!-- /.col-md-4 -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100">
-        <div class="card-body">
-          <h2 class="card-title">Card Two</h2>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
-        </div>
-        <div class="card-footer">
-          <a href="#" class="btn btn-primary">More Info</a>
-        </div>
-      </div>
-    </div>
-    <!-- /.col-md-4 -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100">
-        <div class="card-body">
-          <h2 class="card-title">Card Three</h2>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-        </div>
-        <div class="card-footer">
-          <a href="#" class="btn btn-primary">More Info</a>
-        </div>
-      </div>
-    </div>
+    </div> -->
     <!-- /.col-md-4 -->
 
   </div>
