logs: make it possible to visualize logs from a specific taskSet

--- a/servers/web/public/views/dashboard/executing.html
+++ b/servers/web/public/views/dashboard/executing.html
@@ -46,6 +46,7 @@
                 </div>
               </div>
             </td>
+            <td><button class="btn btn-large btn-primary" ng-click="openLogs(executingTaskSet._id)"><span class="fa fa-fw fa-file"></span> Logs</button></td>
             <td><button class="btn btn-large btn-danger" ng-click="openConfirmation(executingTaskSet._id)"><span class="fa fa-fw fa-trash"></span> Remove</button></td>
           </tr>
         </tbody>
