--- a/servers/web/public/views/dashboard/finished.html
+++ b/servers/web/public/views/dashboard/finished.html
@@ -46,7 +46,7 @@
                 </div>
               </div>
             </td>
-            <!--<td><button class="btn btn-large btn-danger" ng-click="removeTaskSet(finishedTaskSet._id)"><span class="fa fa-fw fa-trash"></span> Remove</button></td>-->
+            <td><button class="btn btn-large btn-primary" ng-click="openLogs(finishedTaskSet._id)"><span class="fa fa-fw fa-file"></span> Logs</button></td>
             <td><button class="btn btn-large btn-danger" ng-click="openConfirmation(finishedTaskSet._id)"><span class="fa fa-fw fa-trash"></span> Remove</button></td>
           </tr>
         </tbody>
