--- a/servers/web/public/views/dashboard/finished.html
+++ b/servers/web/public/views/dashboard/finished.html
@@ -31,7 +31,7 @@
         </thead>
         <tbody>
           <tr dir-paginate="finishedTaskSet in finishedTaskSets | orderBy: sortKey:reverse | filter: search | itemsPerPage: 10 track by finishedTaskSet._id">
-            <td><a ng-href="#!graph/{{finishedTaskSet._id}}">{{finishedTaskSet.name}}</a></td>
+            <td><a ng-href="#!details/{{finishedTaskSet._id}}">{{finishedTaskSet.name}}</a></td>
             <td>{{finishedTaskSet.startTime | date:'yyyy-MM-dd HH:mm:ss Z'}}</td>
             <td>{{finishedTaskSet.endTime | date:'yyyy-MM-dd HH:mm:ss Z'}}</td>
             <td>
