--- a/servers/web/public/views/dashboard/details.html
+++ b/servers/web/public/views/dashboard/details.html
@@ -11,6 +11,20 @@
           <p><b>Start: </b>{{taskSet.startTime | date : "MMM d, y HH:mm:ss Z" }}</p>
           <p><b>End: </b>{{taskSet.endTime | date : "MMM d, y HH:mm:ss Z" }}</p>
           <p><b>Command Template: </b>{{taskSet.argumentTemplate}}</p>
+
+
+          <div class="dropdown">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+              <span class="fa fa-fw fa-download"></span>  Export
+            </button>
+            <div class="dropdown-menu">
+              <!--<span class="dropdown-item" ng-click="export(finishedTaskSet._id, 'json')">JSON</span>-->
+              <a class="dropdown-item" ng-href="/api/task/export/?format=json&taskSetId={{taskSet._id}}" download="{{taskSet.name}}.zip">JSON</a>
+              <a class="dropdown-item" ng-href="/api/task/export/?format=csv&taskSetId={{taskSet._id}}" download="{{taskSet.name}}.zip">CSV</a>
+            </div>
+          </div><br>
+          <button class="btn btn-large btn-primary" ng-click="openGraphs(taskSet._id)"><span class="fa fa-fw fa-line-chart"></span> Graphs</button><br><br>
+          <button class="btn btn-large btn-danger" ng-click="openConfirmation(taskSet._id)"><span class="fa fa-fw fa-trash"></span> Remove</button>
         </div>
         <div class="box one">
             <h4>Tasks</h4>
