--- a/servers/web/public/views/dashboard/details.html
+++ b/servers/web/public/views/dashboard/details.html
@@ -24,6 +24,7 @@
             </div>
           </div><br>
           <button class="btn btn-large btn-primary" ng-click="openGraphs(taskSet._id)"><span class="fa fa-fw fa-line-chart"></span> Graphs</button><br><br>
+          <button class="btn btn-large btn-primary" ng-click="clone(taskSet._id)"><span class="fa fa-fw fa-clone"></span> Clone</button><br><br>
           <button class="btn btn-large btn-danger" ng-if="taskSet.state === 0" ng-click="openCancel(taskSet._id)"><span class="fa fa-fw fa-times"></span> Cancel</button>
           <button class="btn btn-large btn-danger" ng-click="openRemove(taskSet._id)"><span class="fa fa-fw fa-trash"></span> Remove</button>
         </div>
